--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -13,24 +13,30 @@ register_toolchains(
     "@toolchains_llvm_bootstrapped//toolchain:all",
 )
 
-bazel_dep(name = "rules_rust", version = "0.68.1")
-single_version_override(
-    module_name = "rules_rust",
-    patch_strip = 0,
-    patches = ["//patches:rules_rust.patch"],
-)
+# bazel_dep(name = "rules_rust", version = "0.68.1")
+# single_version_override(
+#     module_name = "rules_rust",
+#     patch_strip = 0,
+#     patches = ["//patches:rules_rust.patch"],
+# )
 
 bazel_dep(name = "rules_rust_prost", version = "0.68.1")
-bazel_dep(name = "rules_rs", version = "0.0.30")
+bazel_dep(name = "rules_rs", version = "0.0.33")
 
-rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
-rust.toolchain(
+
+
+toolchains = use_extension("@rules_rs//rs/experimental/toolchains:module_extension.bzl", "toolchains")
+
+toolchains.toolchain(
     edition = "2024",
-    versions = ["1.93.0"],
+    version = "1.93.0",
 )
-use_repo(rust, "rust_toolchains")
 
-register_toolchains("@rust_toolchains//:all")
+use_repo(toolchains, "default_rust_toolchains")
+register_toolchains("@default_rust_toolchains//:all")
+
+rules_rust = use_extension("@rules_rs//rs/experimental:rules_rust.bzl", "rules_rust")
+use_repo(rules_rust, "rules_rust")
 
 crate = use_extension("@rules_rs//rs:extensions.bzl", "crate")
 crate.from_cargo(
@@ -42,6 +48,7 @@ crate.from_cargo(
         "x86_64-unknown-linux-gnu",
     ],
     validate_lockfile = True,
+    use_experimental_platforms = True,
 )
 use_repo(crate, "crates")
 
