--- a/compiler/cranelift_backend/BUILD.bazel
+++ b/compiler/cranelift_backend/BUILD.bazel
@@ -3,7 +3,12 @@ load("//tools/bazel/macros:rust.bzl", "rust_library")
 
 rust_library(
     name = "cranelift_backend",
-    srcs = ["lib.rs"],
+    srcs = [
+        "lib.rs",
+        "linker_bridge.rs",
+        "object_emission.rs",
+        "runtime_interface_emission.rs",
+    ],
     visibility = ["//:__subpackages__"],
     deps = [
         "//compiler/executable_program",
