--- a/playground/BUILD.bazel
+++ b/playground/BUILD.bazel
@@ -13,6 +13,7 @@ pkg_tar(
     # TODO(isaac): Remove this temporary image layer once compiler linking is
     # fully hermetic and no longer depends on `clang++` on PATH.
     name = "playground_llvm_toolchain_layer",
+    include_runfiles = True,
     srcs = [
         "@toolchains_llvm_bootstrapped//tools:clang",
         "@toolchains_llvm_bootstrapped//tools:clang++",
