--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -3,7 +3,16 @@ module(name = "coppice")
 bazel_dep(name = "bazel_skylib", version = "1.9.0")
 bazel_dep(name = "rules_go", version = "0.60.0")
 bazel_dep(name = "protobuf", version = "33.5")
-bazel_dep(name = "toolchains_llvm_bootstrapped", version = "0.5.9")
+bazel_dep(
+    name = "llvm",
+    version = "0.5.9",
+    repo_name = "toolchains_llvm_bootstrapped",
+)
+local_path_override(
+    module_name = "llvm",
+    path = "/Users/isaacparker/Development/toolchains_llvm_bootstrapped",
+)
+
 bazel_dep(name = "gazelle", version = "0.47.0")
 bazel_dep(name = "rules_pkg", version = "1.2.0")
 bazel_dep(name = "rules_oci", version = "2.2.7")
