--- a/compiler/cli/BUILD.bazel
+++ b/compiler/cli/BUILD.bazel
@@ -3,6 +3,9 @@ load("//tools/bazel/macros:rust.bzl", "rust_binary")
 rust_binary(
     name = "main",
     srcs = ["main.rs"],
+    data = [
+        "@toolchains_llvm_bootstrapped//toolchain:linker_wrapper",
+    ],
     visibility = ["//visibility:public"],
     deps = [
         "//compiler/driver",
