--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -4,13 +4,13 @@ bazel_dep(name = "bazel_skylib", version = "1.9.0")
 bazel_dep(name = "rules_go", version = "0.60.0")
 bazel_dep(name = "protobuf", version = "33.5")
 bazel_dep(
-    name = "llvm",
+    name = "toolchains_llvm_bootstrapped",
     version = "0.5.9",
-    repo_name = "toolchains_llvm_bootstrapped",
 )
-local_path_override(
-    module_name = "llvm",
-    path = "/Users/isaacparker/Development/toolchains_llvm_bootstrapped",
+single_version_override(
+    module_name = "toolchains_llvm_bootstrapped",
+    patch_strip = 0,
+    patches = ["//patches:toolchains_llvm_bootstrapped.patch"],
 )
 
 bazel_dep(name = "gazelle", version = "0.47.0")
