Upgrade llvm toolchain after rename

--- a/.buildkite/pipelines/playground_deploy.yaml
+++ b/.buildkite/pipelines/playground_deploy.yaml
@@ -15,7 +15,7 @@ steps:
 
           bazel run \
             --stamp \
-            --platforms=@toolchains_llvm_bootstrapped//platforms:linux_amd64 \
+            --platforms=@llvm//platforms:linux_amd64 \
             //playground:playground_push
       concurrency_group: "playground-deploy-main"
       concurrency: 1
