--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -3,15 +3,13 @@ module(name = "coppice")
 bazel_dep(name = "bazel_skylib", version = "1.9.0")
 bazel_dep(name = "rules_go", version = "0.60.0")
 bazel_dep(name = "protobuf", version = "33.5")
-bazel_dep(name = "toolchains_llvm_bootstrapped", version = "0.5.9")
+bazel_dep(name = "llvm", version = "0.6.0")
 bazel_dep(name = "gazelle", version = "0.47.0")
 bazel_dep(name = "rules_pkg", version = "1.2.0")
 bazel_dep(name = "rules_oci", version = "2.2.7")
 bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
 
-register_toolchains(
-    "@toolchains_llvm_bootstrapped//toolchain:all",
-)
+register_toolchains("@llvm//toolchain:all")
 
 bazel_dep(name = "rules_rust", version = "0.68.1")
 single_version_override(
