--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -4,9 +4,10 @@ bazel_dep(name = "bazel_skylib", version = "1.9.0")
 bazel_dep(name = "rules_go", version = "0.60.0")
 bazel_dep(name = "protobuf", version = "33.5")
 bazel_dep(name = "llvm", version = "0.6.0")
-local_path_override(
+single_version_override(
     module_name = "llvm",
-    path = "/Users/isaacparker/Development/toolchains_llvm_bootstrapped",
+    patch_strip = 0,
+    patches = ["//patches:llvm.patch"],
 )
 
 bazel_dep(name = "gazelle", version = "0.47.0")
