--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1,4 +1,5 @@
 load("@gazelle//:def.bzl", "gazelle", "gazelle_binary")
+load("@npm//:defs.bzl", "npm_link_all_packages")
 load("@rules_rust//cargo:defs.bzl", "extract_cargo_lints")
 
 # gazelle:generation_mode update_only
@@ -28,3 +29,5 @@ gazelle(
     name = "gazelle",
     gazelle = ":gazelle_multilang",
 )
+
+npm_link_all_packages()
