--- a/.buildkite/.bazelrc
+++ b/.buildkite/.bazelrc
@@ -7,4 +7,5 @@ common --remote_cache=grpcs://remote.buildbuddy.io
 common --bes_backend=grpcs://remote.buildbuddy.io
 common --remote_accept_cached=true
 common --remote_upload_local_results=true
+common --local_ram_resources=3072
 try-import .bazelrc.auth
