--- a/playground/web/BUILD.bazel
+++ b/playground/web/BUILD.bazel
@@ -1,11 +1,62 @@
-load("@aspect_bazel_lib//lib:copy_to_directory.bzl", "copy_to_directory")
+load("@npm//:typescript/package_json.bzl", typescript_bin = "bin")
+load("@npm//:vite/package_json.bzl", vite_bin = "bin")
 
-copy_to_directory(
-    name = "web_assets",
-    srcs = glob(
-        ["*"],
-        exclude = ["BUILD.bazel"],
-    ) + ["@monaco_editor//:assets"],
-    include_external_repositories = ["*"],
-    visibility = ["//:__subpackages__"],
+typescript_bin.tsc_test(
+    name = "typecheck",
+    args = [
+        "--noEmit",
+        "--project",
+        "tsconfig.json",
+    ],
+    chdir = package_name(),
+    data = [
+        "tsconfig.json",
+    ] + glob(
+        [
+            "*.ts",
+            "*.tsx",
+        ],
+        exclude = ["vite.config.ts"],
+    ) + [
+        "//:node_modules/@types/react",
+        "//:node_modules/@types/react-dom",
+        "//:node_modules/@vitejs/plugin-react",
+        "//:node_modules/monaco-editor",
+        "//:node_modules/react",
+        "//:node_modules/react-dom",
+        "//:node_modules/vite",
+    ],
+)
+
+vite_bin.vite(
+    name = "build",
+    srcs = [
+        "index.html",
+        "style.css",
+        "tsconfig.json",
+        "vite.config.ts",
+    ] + glob(
+        [
+            "*.ts",
+            "*.tsx",
+        ],
+        exclude = ["vite.config.ts"],
+    ) + [
+        "//:node_modules/@tailwindcss/vite",
+        "//:node_modules/@vitejs/plugin-react",
+        "//:node_modules/monaco-editor",
+        "//:node_modules/react",
+        "//:node_modules/react-dom",
+        "//:node_modules/tailwindcss",
+        "//:node_modules/vite",
+    ],
+    args = [
+        "build",
+        "--outDir",
+        "dist",
+        "--emptyOutDir",
+    ],
+    chdir = package_name(),
+    out_dirs = ["dist"],
+    visibility = ["//visibility:public"],
 )
