--- a/compiler/cli/BUILD.bazel
+++ b/compiler/cli/BUILD.bazel
@@ -5,7 +5,9 @@ rust_binary(
     srcs = ["main.rs"],
     visibility = ["//visibility:public"],
     deps = [
+        "//compiler/check_pipeline",
         "//compiler/driver",
+        "//compiler/lsp",
         "//compiler/reports",
         "@crates//:clap",
         "@crates//:serde_json",
