--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,5 +1,7 @@
 packages:
-    - .
+    - "."
+    - "tools/vscode/coppice-lsp"
 
 autoInstallPeers: false
 strictPeerDependencies: true
+confirmModulesPurge: false
