VSCode LSP integration, shared check session architecture (#61)

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,5 +1,7 @@
 packages:
-    - .
+    - "."
+    - "editor/vscode"
 
 autoInstallPeers: false
 strictPeerDependencies: true
+confirmModulesPurge: false
