Playground uses workspace markers

--- a/examples/BUILD.bazel
+++ b/examples/BUILD.bazel
@@ -2,6 +2,7 @@ filegroup(
     name = "workspace_files",
     srcs = ["README.md"] + glob([
         "**/*.copp",
+        "**/COPPICE_WORKSPACE",
     ]),
     visibility = ["//visibility:public"],
 )
