--- a/compiler/cli/BUILD.bazel
+++ b/compiler/cli/BUILD.bazel
@@ -7,6 +7,7 @@ rust_binary(
     deps = [
         "//compiler/check_pipeline",
         "//compiler/driver",
+        "//compiler/fix_edits",
         "//compiler/lsp",
         "//compiler/reports",
         "@crates//:clap",
