--- a/compiler/driver/BUILD.bazel
+++ b/compiler/driver/BUILD.bazel
@@ -5,6 +5,7 @@ rust_library(
     srcs = ["lib.rs"],
     visibility = ["//:__subpackages__"],
     deps = [
+        "//compiler/autofix_policy",
         "//compiler/check_pipeline",
         "//compiler/cranelift_backend",
         "//compiler/executable_lowering",
