Rename for clarity

--- a/compiler/analysis_pipeline/BUILD.bazel
+++ b/compiler/analysis_pipeline/BUILD.bazel
@@ -2,7 +2,7 @@ load("//tools/bazel/aspects:dependency_enforcement.bzl", "dependency_enforcement
 load("//tools/bazel/macros:rust.bzl", "rust_library")
 
 rust_library(
-    name = "check_pipeline",
+    name = "analysis_pipeline",
     srcs = ["lib.rs"],
     visibility = ["//:__subpackages__"],
     deps = [
@@ -29,11 +29,11 @@ rust_library(
 )
 
 dependency_enforcement_test(
-    name = "check_pipeline_forbidden_dependencies",
+    name = "analysis_pipeline_forbidden_dependencies",
     forbidden = [
         "//compiler/cranelift_backend",
         "//compiler/executable_lowering",
         "//compiler/runtime_interface",
     ],
-    target = ":check_pipeline",
+    target = ":analysis_pipeline",
 )
