Use 4 space indentation for JSON CLI output

--- a/compiler/cli/BUILD.bazel
+++ b/compiler/cli/BUILD.bazel
@@ -10,6 +10,7 @@ rust_binary(
         "//compiler/lsp",
         "//compiler/reports",
         "@crates//:clap",
+        "@crates//:serde",
         "@crates//:serde_json",
     ],
 )
