--- a/compiler/diagnostics/BUILD.bazel
+++ b/compiler/diagnostics/BUILD.bazel
@@ -16,10 +16,12 @@ dependency_enforcement_test(
         "//compiler/driver",
         "//compiler/exports",
         "//compiler/file_role_rules",
+        "//compiler/fix_edits",
         "//compiler/package_graph",
         "//compiler/package_symbols",
         "//compiler/packages",
         "//compiler/parsing",
+        "//compiler/safe_autofix",
         "//compiler/symbols",
         "//compiler/syntax",
         "//compiler/semantic_types",
