--- a/compiler/type_analysis/BUILD.bazel
+++ b/compiler/type_analysis/BUILD.bazel
@@ -16,8 +16,10 @@ rust_library(
     visibility = ["//:__subpackages__"],
     deps = [
         "//compiler/diagnostics",
+        "//compiler/fix_edits",
         "//compiler/packages",
         "//compiler/phase_results",
+        "//compiler/safe_autofix",
         "//compiler/semantic_program",
         "//compiler/semantic_types",
         "//compiler/source",
