Clippy redundant clone

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,3 +55,5 @@ missing_errors_doc = "allow"
 missing_panics_doc = "allow"
 too_many_arguments = "allow"
 too_many_lines = "allow"
+
+redundant_clone = "deny"
